get user's universities endpoint
