# api/internal/repository/rdto/university.go
@@ -1,0 +1,6 @@
+package rdto
+
+type University struct {
+	ID   int    `json:"id" db:"id"`
+	Name string `json:"name" db:"name"`
+}
